add remove threat to wazuh

--- a/config/wazuh_cluster/wazuh_manager_ossec.conf
+++ b/config/wazuh_cluster/wazuh_manager_ossec.conf
@@ -265,6 +265,26 @@
     <timeout_allowed>yes</timeout_allowed>
   </command>
 
+  <!-- Remove Threat if found on VirusTotal -->
+  <command>
+    <name>remove-threat</name>
+    <executable>remove-threat.sh</executable>
+    <expect>filename</expect>
+    <timeout_allowed>no</timeout_allowed>
+  </command>
+
+  <active-response>
+    <disabled>no</disabled>
+    <command>remove-threat</command>
+    <location>local</location>
+  </active-response>
+
+  <integration>
+    <name>custom-remove-threat</name>
+    <rule_id>87105</rule_id>
+    <alert_format>json</alert_format>
+  </integration>
+
 <!-- Integration -->
   <integration>
     <name>custom-telegram</name>
