--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.7'
 
 services:
   wazuh.manager:
-    image: wazuh/wazuh-manager:4.4.1
+    image: wazuh/wazuh-manager:4.4.3
     hostname: wazuh.manager
     restart: always
     ports:
@@ -21,6 +21,9 @@ services:
       - SSL_KEY=/etc/ssl/filebeat.key
       - API_USERNAME=wazuh-wui
       - API_PASSWORD=MyS3cr37P450r.*-
+      - TELEGRAM_CHAT_ID=-994280177
+      - MISP_API_KEY=kYkUTlsfynv7aIksdcVkhiESZDPiS020gte4xszX
+      - MISP_BASE_URL=https://34.136.183.131
     volumes:
       - wazuh_api_configuration:/var/ossec/api/configuration
       - wazuh_etc:/var/ossec/etc
@@ -40,7 +43,7 @@ services:
       - ./config/wazuh_cluster/wazuh_manager_ossec.conf:/wazuh-config-mount/etc/ossec.conf
 
   wazuh.indexer:
-    image: wazuh/wazuh-indexer:4.4.1
+    image: wazuh/wazuh-indexer:4.4.3
     hostname: wazuh.indexer
     restart: always
     ports:
@@ -65,7 +68,7 @@ services:
       - ./config/wazuh_indexer/internal_users.yml:/usr/share/wazuh-indexer/opensearch-security/internal_users.yml
 
   wazuh.dashboard:
-    image: wazuh/wazuh-dashboard:4.4.1
+    image: wazuh/wazuh-dashboard:4.4.3
     hostname: wazuh.dashboard
     restart: always
     ports:
@@ -111,11 +114,6 @@ volumes:
       type: none
       device: ${PWD}/config/wazuh_cluster/ossec/integrations/
   wazuh_active_response:
-    driver: local
-    driver_opts:
-      o: bind
-      type: none
-      device: ${PWD}/config/wazuh_cluster/ossec/active-response/bin/
   wazuh_agentless:
   wazuh_wodles:
   filebeat_etc:
