add new rule and change ossec.conf for firewall-drop

--- a/config/wazuh_cluster/ossec/etc/shared/ar.conf
+++ b/config/wazuh_cluster/ossec/etc/shared/ar.conf
@@ -8,3 +8,4 @@ remove-threat0 - remove-threat.sh - 0
 firewall-drop60 - firewall-drop - 60
 netsh60 - netsh.exe - 60
 remove-threat0 - remove-threat.sh - 0
+firewall-drop60 - firewall-drop - 60
