--- a/config/wazuh_cluster/ossec/etc/ossec.conf
+++ b/config/wazuh_cluster/ossec/etc/ossec.conf
@@ -331,6 +331,13 @@
     <rules_id>87105</rules_id>
   </active-response>
 
+  <active-response>
+    <command>firewall-drop</command>
+    <location>local</location>
+    <level>15</level>
+    <timeout>60</timeout>
+  </active-response>
+
   <!-- Log analysis -->
   <localfile>
     <log_format>command</log_format>
